== Changelog ==

= 2.4.1 - OCT 21 2024 =
- Fixed: OceanWP Metabox Settings: Logo: Customizer logo doesn't get overridden on individual level (main Customizer logo always displayed).

= 2.4.0 - OCT 16 2024 =
- NEW: Customizer: Library upgraded to default WordPress ReactJS.
- NEW: Customizer: User Interface.
- Added: Customizer: Main panel icons for improved visual navigation and user experience.
- Added: Customizer: Panel grouping based website role for improved visual navigation and user experience.
- Added: OceanWP Panel: Customizer: New panels users can disable / enable per need for faster loading and visual navigation.
- Removed: Customizer: Legacy PHP Controls.
- Removed: OceanWP Panel: Customizer: Panels: Legacy panels.

= 2.3.1 - OCT 11 2024 =
- Added: Conditional checks for future updates.
- Updated: Compatibility: WordPress version number.

= 2.3.0 - JUL 03 2024 =
- Fixed: Potential vulnerability patched: Report by Patchstack from June 25th 2024.
Updated: WordPress version for compatibility.

= 2.2.9 - JUN 05 2024 =
- Fixed: Potential vulnerability patched: Wordfence report from Jun 3rd 2024. A special thanks goes towards the Wordfence team for doublechecking everything as always.
- Fixed: WordPress Widgets: Flickr: if widget in use more than once on a page, images display with a single widget only.
- Fixed: Customizer: Console error while Customizer in use: Store "core / interface" is already registered.

= 2.2.8 - MAY 22 2024 =
- Added: Additional support for the oceanwp_post_id() function.
- Added: Support for new functionality for Ocean Hooks 2.1.1 version.
- Updated: Freemius SDK to 2.7.2 version.
- Updated: Compatibility: WordPress version.

= 2.2.7 - APR 08 2024 =
- Fixed: Potential vulnerability patched: Wordfence report from Apr 3rd 2024. A special thanks goes towards the Wordfence team for doublechecking everything as always.

= 2.2.6 - MAR 12 2024 =